--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
 <body>
 
 <!--Navigation-->
+<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+        <a href="#" class="navbar-brand">
+            <img src="imgs/Luffy-3.png" width="200px" height="63px">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="navbar-item active">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="" class="nav-link">Services</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Team</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Connect</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <!--Image Slider-->
 
