--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
 </nav>
 
 <!--Image Slider-->
+<div id="slides" class="carousel slide" data-ride="carousel">
+    <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+    </ul>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="imgs/slider1.jpg" width="100%" height="650px">
+            <div class="carousel-caption">
+                <h1 class="display-2">One Piece</h1>
+                <h3>3DaysX2Years (3Dx2Y)</h3>
+                <button class="btn btn-outline-light btn-lg">View Demo</button>
+                <button class="btn btn-primary btn-lg">Get Started</button>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="imgs/slider2.jpg" width="100%" height="650px">
+        </div>
+        <div class="carousel-item">
+            <img src="imgs/slider3.png" width="100%" height="650px">
+        </div>
+    </div>
+</div>
 
 <!--Jumbotrom-->
 
