--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
 </div>
 
 <!--Jumbotrom-->
+<div class="container-fluid">
+    <div class="row jumbotron">
+        <div class="col-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
+            <p class="lead">One Piece là bộ manga dành cho lứa tuổi thiếu niên
+                của tác giả Eiichiro Oda, được đăng định kì trên tạp chí Weekly
+                Shōnen Jump, ra mắt lần đầu trên ấn bản số 34 vào ngày 19 tháng 7
+                năm 1997. Bản tankōbon của truyện do Nhà xuất bản Sheisha phát hành
+                với tập đầu tiên vào ngày 24 tháng 12 năm 1997.</p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
+            <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+        </div>
+    </div>
+</div>
 
 <!--Welcome Section-->
 
