--- a/index.html
+++ b/index.html
@@ -85,8 +85,42 @@
 </div>
 
 <!--Welcome Section-->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">Built with ease, OP.</h1>
+        </div>
+        <hr>
+        <div class="col-12">
+            <p class="lead">One Piece nói về cuộc hành trình của Monkey D. Luffy
+                - thuyền trưởng của băng hải tặc Mũ Rơm và các đồng đội của cậu.
+                Luffy tìm kiếm vùng biển bí ẩn nơi cất giữ kho báu lớn nhất thế
+                giới One Piece, với mục đích trở thành Tân Vua Hải Tặc.</p>
+        </div>
+    </div>
+</div>
 
 <!--Three Column Section-->
+<div class="container-fluid padding">
+    <div class="row text-center padding">
+        <div class="col-12 col-sm-6 col-md-4">
+            <i class="fas fa-code"></i>
+            <h3>HTML5</h3>
+            <p>Built with the latest version of HTML, HTML5.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+            <i class="fas fa-bold"></i>
+            <h3>Bootstrap</h3>
+            <p>Built with the latest version of Bootstrap, Bootstrap4.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+            <i class="fas fa-apple"></i>
+            <h3>Apple</h3>
+            <p>Built with the latest version of Iphone, Apple.</p>
+        </div>
+    </div>
+    <hr class="my-4">
+</div>
 
 <!--Two Column Section-->
 
