add two column section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4">Built with ease, OP.</h1>
+            <h1 class="display-4">Built with ease, OnePiece.</h1>
         </div>
         <hr>
         <div class="col-12">
@@ -123,6 +123,34 @@
 </div>
 
 <!--Two Column Section-->
+<div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-md-12 col-lg-6">
+            <h2>Kỷ nguyên đại hải tặc bắt đầu...</h2>
+            <p>Câu truyện bắt đầu với cảnh xử tử của Vua Hải Tặc (海賊王 Kaizokuō?)
+                Gol D. Roger.</p>
+            <p>Ngay trước khi chết, Roger tiết lộ rằng kho báu của ông ta để hết ở
+                ngoài biển ấy nếu ai tìm được sẽ là của kẻ đó.</p>
+            <p>Và thế là những người có máu phiêu lưu và những kẻ tham vọng đều đổ
+                xô ra biển tìm kiếm kho báu vĩ đại nhất, One Piece (ひとつなぎの大秘宝
+                ワンピース Wan Pīsu?).</p>
+            <p>Kỉ nguyên Đại hải tặc (大海賊時代 Dai Kaizoku Jidai?) bắt đầu.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+        <div class="col-lg-6">
+            <div class="row align-items-center">
+                <div class="col"></div>
+                <div class="col-md-10 col-md-auto">
+                    <img src="imgs/max.jpg" class="img-thumbnail" width="100%" height="100%">
+                </div>
+                <div class="col"></div>
+            </div>
+
+
+        </div>
+    </div>
+</div>
 
 <!--Fixed Background-->
 
