add emoji section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     </div>
 </div>
 
+<hr class="my-3">
+
 <!--Three Column Section-->
 <div class="container-fluid padding">
     <div class="row text-center padding">
@@ -146,15 +148,43 @@
                 </div>
                 <div class="col"></div>
             </div>
-
-
         </div>
     </div>
 </div>
 
+<hr class="my-4">
+
 <!--Fixed Background-->
+<figure>
+    <div class="fixed-wrap">
+        <div class="fixed">
+
+        </div>
+    </div>
+</figure>
 
 <!--Emoji Section-->
+<button class="fun" data-toggle="collapse" data-target="#emoji">
+    Click for fun
+</button>
+<div id="emoji" class="collapse">
+    <div class="container-fluid padding">
+        <div class="row text-center">
+            <div class="col-sm-6 col-md-3">
+                <img src="imgs/gif/dog.gif" class="gif" width="75%" height="80%">
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <img src="imgs/gif/bear.gif" class="gif" width="75%" height="80%">
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <img src="imgs/gif/tenor.gif" class="gif" width="75%" height="80%">
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <img src="imgs/gif/cat.gif" class="gif" width="75%" height="80%">
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--Meet the team-->
 
