--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="imgs/slider1.jpg" width="100%" height="650px">
+            <img src="imgs/slider1.jpg" width="100%" height="100%">
             <div class="carousel-caption">
                 <h1 class="display-2">One Piece</h1>
                 <h3>3DaysX2Years (3Dx2Y)</h3>
@@ -60,10 +60,10 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="imgs/slider2.jpg" width="100%" height="650px">
+            <img src="imgs/slider2.jpg" width="100%" height="100%">
         </div>
         <div class="carousel-item">
-            <img src="imgs/slider3.png" width="100%" height="650px">
+            <img src="imgs/slider3.png" width="100%" height="100%">
         </div>
     </div>
 </div>
