add meet the team and Cards

--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@
 <!--Two Column Section-->
 <div class="container-fluid padding">
     <div class="row padding">
+        <div class="col-lg"></div>
         <div class="col-md-12 col-lg-6">
             <h2>Kỷ nguyên đại hải tặc bắt đầu...</h2>
-            <p>Câu truyện bắt đầu với cảnh xử tử của Vua Hải Tặc (海賊王 Kaizokuō?)
-                Gol D. Roger.</p>
+            <p>Câu truyện bắt đầu với cảnh xử tử của Vua Hải Tặc Gol D. Roger.</p>
             <p>Ngay trước khi chết, Roger tiết lộ rằng kho báu của ông ta để hết ở
-                ngoài biển ấy nếu ai tìm được sẽ là của kẻ đó.</p>
-            <p>Và thế là những người có máu phiêu lưu và những kẻ tham vọng đều đổ
-                xô ra biển tìm kiếm kho báu vĩ đại nhất, One Piece (ひとつなぎの大秘宝
-                ワンピース Wan Pīsu?).</p>
-            <p>Kỉ nguyên Đại hải tặc (大海賊時代 Dai Kaizoku Jidai?) bắt đầu.</p>
+                ngoài biển ấy nếu ai tìm được sẽ là của kẻ đó. Và thế là những người
+                có máu phiêu lưu và những kẻ tham vọng đều đổ xô ra biển tìm kiếm
+                kho báu vĩ đại nhất, One Piece.</p>
+            <p>Kỉ nguyên Đại hải tặc bắt đầu.</p>
             <br>
             <a href="#" class="btn btn-primary">Learn More</a>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-5">
             <div class="row align-items-center">
                 <div class="col"></div>
-                <div class="col-md-10 col-md-auto">
+                <div class="col-md-9 col-md-auto">
                     <img src="imgs/max.jpg" class="img-thumbnail" width="100%" height="100%">
                 </div>
+                <div class="col"></div>
                 <div class="col"></div>
             </div>
         </div>
@@ -187,10 +187,145 @@
 </div>
 
 <!--Meet the team-->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">Meet the Team</h1>
+        </div>
+        <hr>
+    </div>
+</div>
 
 <!--Cards-->
+<div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-md col-sm-4">
+            <div class="card">
+                <img src="imgs/cards/luffy.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Monkey D.Luffy</h4>
+                    <p class="card-text">Monkey D. Luffy là nhân vật chính của One Piece
+                        và là thuyền trưởng của băng Hải tặc Mũ Rơm, anh có biệt danh là
+                        "Luffy Mũ Rơm.</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-4">
+            <div class="card">
+                <img src="imgs/cards/zoro.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Roronoa Zoro</h4>
+                    <p class="card-text">Roronoa Zoro là kiếm sĩ của băng hải tặc Mũ Rơm,
+                        là thành viên thứ hai của băng Mũ Rơm. Zoro có biệt danh là "Thợ
+                        săn Hải tặc".</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-4">
+            <div class="card">
+                <img src="imgs/cards/nami.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Nami</h4>
+                    <p class="card-text">Nami là Hoa Tiêu của băng hải tặc Mũ Rơm. Cô là thành
+                        viên thứ ba của băng và có biệt danh là "Miêu tặc". Hoàn thành bản đồ
+                        One Piece.</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-4">
+            <div class="card">
+                <img src="imgs/cards/usop.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Usopp</h4>
+                    <p class="card-text">Usopp là xạ thủ của băng hải tặc Mũ Rơm và là thành viên
+                        thứ tư của băng. Biệt danh của Usopp là "God", và "Vua bắn tỉa".</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-4">
+            <div class="card">
+                <img src="imgs/cards/sanji.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Sanji</h4>
+                    <p class="card-text">Sanji là Đầu Bếp của băng hải tặc Mũ Rơm. Sanji
+                        là thành viên thứ năm của băng. Anh có biệt danh Sanji Chân Đen.</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row padding">
+        <div class="col-md col-sm-6">
+            <div class="card">
+                <img src="imgs/cards/chopper.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Tony T.Chopper</h4>
+                    <p class="card-text">Tony Tony Chopper là Bác sĩ của băng hải tặc Mũ Rơm
+                        và là thành viên thứ sáu của băng. Chopper có biệt danh "Kẻ yêu kẹo
+                        bông".</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-6">
+            <div class="card">
+                <img src="imgs/cards/robin.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Nico Robin</h4>
+                    <p class="card-text">Nico Robin là nhà Khảo Cổ Học của băng Mũ Rơm và là
+                        thành viên thứ bảy của băng hải tặc Mũ Rơm, có biệt danh "Đứa
+                        con của quỷ".</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-6">
+            <div class="card">
+                <img src="imgs/cards/franky.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Franky</h4>
+                    <p class="card-text">Franky là thợ đóng tàu của băng hải tặc Mũ Rơm và
+                        là thành viên thứ tám của băng. Biệt danh của anh là "Người máy"
+                        Franky.</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-6">
+            <div class="card">
+                <img src="imgs/cards/brook.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Brook</h4>
+                    <p class="card-text">Brook là Nhạc Công của băng hải tặc Mũ Rơm. Brook
+                        là thành viên thứ chín của băng. Brook có biệt danh là "Brook
+                        Ngân Nga".</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md col-sm-6">
+            <div class="card">
+                <img src="imgs/cards/jinbe.jpg" class="card-imd-top img-thumbnail">
+                <div class="card-body">
+                    <h4 class="card-title">Jinbe</h4>
+                    <p class="card-text">Jinbe, cựu thất vũ hải, là người lái tàu của băng hải tặc Mũ Rơm và
+                        là thành viên thứ mười chưa chính thức của băng.</p>
+                    <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<hr class="my-4">
 
 <!--Two Column Section-->
+
 
 <!--Connect-->
 
