add 2 column section

--- a/index.html
+++ b/index.html
@@ -229,24 +229,24 @@
                 <div class="card-body">
                     <h4 class="card-title">Nami</h4>
                     <p class="card-text">Nami là Hoa Tiêu của băng hải tặc Mũ Rơm. Cô là thành
-                        viên thứ ba của băng và có biệt danh là "Miêu tặc". Hoàn thành bản đồ
+                        viên thứ ba của băng và có biệt danh là "Miêu tặc". Bản đồ
                         One Piece.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
         </div>
-        <div class="col-md col-sm-4">
+        <div class="col-md col-sm-6">
             <div class="card">
                 <img src="imgs/cards/usop.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Usopp</h4>
                     <p class="card-text">Usopp là xạ thủ của băng hải tặc Mũ Rơm và là thành viên
-                        thứ tư của băng. Biệt danh của Usopp là "God", và "Vua bắn tỉa".</p>
+                        thứ tư của băng. Biệt danh của Usopp là "God" & "Vua bắn tỉa".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
         </div>
-        <div class="col-md col-sm-4">
+        <div class="col-md col-sm-6">
             <div class="card">
                 <img src="imgs/cards/sanji.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
@@ -260,7 +260,7 @@
     </div>
 
     <div class="row padding">
-        <div class="col-md col-sm-6">
+        <div class="col-md col-sm-4">
             <div class="card">
                 <img src="imgs/cards/chopper.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
@@ -272,7 +272,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md col-sm-6">
+        <div class="col-md col-sm-4">
             <div class="card">
                 <img src="imgs/cards/robin.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
@@ -284,7 +284,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md col-sm-6">
+        <div class="col-md col-sm-4">
             <div class="card">
                 <img src="imgs/cards/franky.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
@@ -301,8 +301,8 @@
                 <img src="imgs/cards/brook.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Brook</h4>
-                    <p class="card-text">Brook là Nhạc Công của băng hải tặc Mũ Rơm. Brook
-                        là thành viên thứ chín của băng. Brook có biệt danh là "Brook
+                    <p class="card-text">Brook là Nhạc Công của băng hải tặc Mũ Rơm &
+                        là thành viên thứ chín của băng Mũ Rơm. Brook có biệt danh là "Brook
                         Ngân Nga".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
@@ -314,7 +314,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Jinbe</h4>
                     <p class="card-text">Jinbe, cựu thất vũ hải, là người lái tàu của băng hải tặc Mũ Rơm và
-                        là thành viên thứ mười chưa chính thức của băng.</p>
+                        là thành viên thứ mười chưa chính thức của băng hải tặc Mũ Rơm.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -325,7 +325,32 @@
 <hr class="my-4">
 
 <!--Two Column Section-->
-
+<div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-lg"></div>
+        <div class="col-md-12 col-lg-6">
+            <h2>22 năm sau kể từ khi Roger bị xử tử...</h2>
+            <p>Một cậu thiếu niên tên là Monkey D. Luffy được truyền
+                cảm hứng từ một hải tặc là thần tượng thuở nhỏ của mình là Shanks "Tóc đỏ".</p>
+            <p>Từ East Blue đã giong buồm ra khơi trên chuyến hành trình tìm kho báu huyền
+                thoại One Piece và trở thành Vua hải tặc. Luffy bắt đầu tìm kiếm những người
+                đồng đội để lập một băng hải tặc riêng cho mình. </p>
+            <p>Băng hải tặc Mũ Rơm.</p>
+            <br>
+            <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+        <div class="col-lg-5">
+            <div class="row align-items-center">
+                <div class="col"></div>
+                <div class="col-md-9 col-md-auto">
+                    <img src="imgs/luffy2.jpg" class="img-thumbnail" width="100%" height="100%">
+                </div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--Connect-->
 
