--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         </div>
     </div>
 </div>
+<hr class="my-4">
 
 <!--Connect-->
 <div class="container-fluid padding">
@@ -367,8 +368,44 @@
         </div>
     </div>
 </div>
+<hr class="my-4">
 
 <!--Footer-->
+<footer>
+    <div class="container-fluid padding">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <img src="imgs/Luffy-3.png" width="40%" height="20%">
+                <hr class="light">
+                <p>888-888-888</p>
+                <p>giangnguyen2212@gmail.com</p>
+                <p>223B - Baker Street</p>
+                <p>LuanDon - England</p>
+            </div>
+            <div class="col-md-4">
+                <hr class="light">
+                <h5>Our hours</h5>
+                <hr class="light">
+                <p>Monday: 9am - 5pm</p>
+                <p>Saturday: 9am - 12am</p>
+                <p>Sunday: Closed</p>
+            </div>
+            <div class="col-md-4">
+                <hr class="light">
+                <h5>Service Area</h5>
+                <hr class="light">
+                <p>City, State, 00000</p>
+                <p>City, State, 00000</p>
+                <p>City, State, 00000</p>
+                <p>City, State, 00000</p>
+            </div>
+            <div class="col-12">
+                <hr class="light">
+                <h5>&copy; OnePiece.com.vn</h5>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <script src="fontawesome/js/all.js"></script>
