add style css welcome section

--- a/index.html
+++ b/index.html
@@ -74,12 +74,14 @@
         <div class="col-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
             <p class="lead">One Piece là bộ manga dành cho lứa tuổi thiếu niên
                 của tác giả Eiichiro Oda, được đăng định kì trên tạp chí Weekly
-                Shōnen Jump, ra mắt lần đầu trên ấn bản số 34 vào ngày 19 tháng 7
-                năm 1997. Bản tankōbon của truyện do Nhà xuất bản Sheisha phát hành
-                với tập đầu tiên vào ngày 24 tháng 12 năm 1997.</p>
+                Shōnen Jump, ra mắt lần đầu trên ấn bản số 34 vào ngày 19/07/1997.
+                Bản tankōbon của truyện do Nhà xuất bản Sheisha phát hành với tập
+                đầu tiên vào ngày 24/12/1997.</p>
         </div>
         <div class="col-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-            <a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Web Hosting</button></a>
+            <a href="#">
+                <button type="button" class="btn btn-outline-secondary btn-lg">Something else</button>
+            </a>
         </div>
     </div>
 </div>
@@ -88,7 +90,7 @@
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4">Built with ease, OnePiece.</h1>
+            <h1 class="display-4">Câu chuyện trong OnePiece.</h1>
         </div>
         <hr>
         <div class="col-12">
@@ -116,9 +118,9 @@
             <p>Built with the latest version of Bootstrap, Bootstrap4.</p>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
-            <i class="fas fa-apple"></i>
-            <h3>Apple</h3>
-            <p>Built with the latest version of Iphone, Apple.</p>
+            <i class="fas fa-ccs3"></i>
+            <h3>CSS3</h3>
+            <p>Built with the latest version of CSS, CSS3.</p>
         </div>
     </div>
     <hr class="my-4">
@@ -204,9 +206,9 @@
                 <img src="imgs/cards/luffy.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Monkey D.Luffy</h4>
-                    <p class="card-text">Monkey D. Luffy là nhân vật chính của One Piece
-                        và là thuyền trưởng của băng Hải tặc Mũ Rơm, anh có biệt danh là
-                        "Luffy Mũ Rơm.</p>
+                    <p class="card-text">Monkey D. Luffy là main của OP
+                        và là thuyền trưởng của băng Hải tặc Mũ Rơm, có biệt danh là
+                        Luffy Mũ Rơm.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -217,8 +219,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Roronoa Zoro</h4>
                     <p class="card-text">Roronoa Zoro là kiếm sĩ của băng hải tặc Mũ Rơm,
-                        là thành viên thứ hai của băng Mũ Rơm. Zoro có biệt danh là "Thợ
-                        săn Hải tặc".</p>
+                        là thành viên thứ 2 của băng. Có biệt danh "Thợ săn Hải tặc".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -228,9 +229,8 @@
                 <img src="imgs/cards/nami.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Nami</h4>
-                    <p class="card-text">Nami là Hoa Tiêu của băng hải tặc Mũ Rơm. Cô là thành
-                        viên thứ ba của băng và có biệt danh là "Miêu tặc". Bản đồ
-                        One Piece.</p>
+                    <p class="card-text">Nami là Hoa Tiêu của băng hải tặc Mũ Rơm, là thành
+                        viên thứ 3 của băng & có biệt danh "Miêu tặc". Bản đồ.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Usopp</h4>
                     <p class="card-text">Usopp là xạ thủ của băng hải tặc Mũ Rơm và là thành viên
-                        thứ tư của băng. Biệt danh của Usopp là "God" & "Vua bắn tỉa".</p>
+                        thứ 4 của băng. Biệt danh là "God-Vua bắn tỉa".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Sanji</h4>
                     <p class="card-text">Sanji là Đầu Bếp của băng hải tặc Mũ Rơm. Sanji
-                        là thành viên thứ năm của băng. Anh có biệt danh Sanji Chân Đen.</p>
+                        là thành viên thứ 5 của băng. Có biệt danh Sanji Chân Đen.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -264,9 +264,9 @@
             <div class="card">
                 <img src="imgs/cards/chopper.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
-                    <h4 class="card-title">Tony T.Chopper</h4>
-                    <p class="card-text">Tony Tony Chopper là Bác sĩ của băng hải tặc Mũ Rơm
-                        và là thành viên thứ sáu của băng. Chopper có biệt danh "Kẻ yêu kẹo
+                    <h4 class="card-title">Tony Chopper</h4>
+                    <p class="card-text">Tony Chopper là Bác sĩ của băng hải tặc Mũ Rơm
+                        & là thành viên thứ 6 của băng. Có biệt danh "Kẻ yêu kẹo
                         bông".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
@@ -277,9 +277,8 @@
                 <img src="imgs/cards/robin.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Nico Robin</h4>
-                    <p class="card-text">Nico Robin là nhà Khảo Cổ Học của băng Mũ Rơm và là
-                        thành viên thứ bảy của băng hải tặc Mũ Rơm, có biệt danh "Đứa
-                        con của quỷ".</p>
+                    <p class="card-text">Nico Robin là nhà Khảo Cổ Học của băng Mũ Rơm & là
+                        thành viên thứ 7 của băng hải tặc Mũ Rơm, có biệt danh "Child of Devil".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
@@ -290,7 +289,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Franky</h4>
                     <p class="card-text">Franky là thợ đóng tàu của băng hải tặc Mũ Rơm và
-                        là thành viên thứ tám của băng. Biệt danh của anh là "Người máy"
+                        là thành viên thứ 8 của băng. Biệt danh của anh là "Người máy"
                         Franky.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
@@ -302,7 +301,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Brook</h4>
                     <p class="card-text">Brook là Nhạc Công của băng hải tặc Mũ Rơm &
-                        là thành viên thứ chín của băng Mũ Rơm. Brook có biệt danh là "Brook
+                        là thành viên thứ 9 của băng Mũ Rơm. Có biệt danh là "Brook
                         Ngân Nga".</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
@@ -313,8 +312,8 @@
                 <img src="imgs/cards/jinbe.jpg" class="card-imd-top img-thumbnail">
                 <div class="card-body">
                     <h4 class="card-title">Jinbe</h4>
-                    <p class="card-text">Jinbe, cựu thất vũ hải, là người lái tàu của băng hải tặc Mũ Rơm và
-                        là thành viên thứ mười chưa chính thức của băng hải tặc Mũ Rơm.</p>
+                    <p class="card-text">Jinbe, cựu thất vũ hải, là người lái tàu của băng
+                        hải tặc Mũ Rơm và là thành viên thứ 10 chưa chính thức của băng.</p>
                     <a href="#" class="btn btn-outline-secondary">See Profile</a>
                 </div>
             </div>
