--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
 <!--Image Slider-->
 <div id="slides" class="carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
+    <ul class="carousel-indicators" style="margin-bottom: 50px">
         <li data-target="#slides" data-slide-to="0" class="active"></li>
         <li data-target="#slides" data-slide-to="1"></li>
         <li data-target="#slides" data-slide-to="2"></li>
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="imgs/slider1.jpg" width="100%" height="100%">
+            <img src="imgs/slider4.jpg" width="100%" height="100%">
             <div class="carousel-caption">
                 <h1 class="display-2">One Piece</h1>
                 <h3>3DaysX2Years (3Dx2Y)</h3>
