--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4">Câu chuyện trong OnePiece.</h1>
+            <h1 class="display-4">Câu chuyện trong One Piece.</h1>
         </div>
         <hr>
         <div class="col-12">
@@ -115,7 +115,7 @@
         <div class="col-12 col-sm-6 col-md-4">
             <i class="fas fa-bold"></i>
             <h3>Bootstrap</h3>
-            <p>Built with the latest version of Bootstrap, Bootstrap4.</p>
+            <p>Built with the latest version of Bootstrap4.</p>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
             <i class="fas fa-ccs3"></i>
@@ -160,7 +160,7 @@
 <figure>
     <div class="fixed-wrap">
         <div class="fixed">
-
+            <img src="imgs/pan.jpg" width="100%" height="100%">
         </div>
     </div>
 </figure>
@@ -354,7 +354,7 @@
 
 <!--Connect-->
 <div class="container-fluid padding">
-    <div class="container-fluid padding">
+    <div class="row text-center padding">
         <div class="col-12">
             <h2>Connect</h2>
         </div>
@@ -367,7 +367,6 @@
         </div>
     </div>
 </div>
-<hr class="my-4">
 
 <!--Footer-->
 <footer>
