add change fixed background

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 <!--Fixed Background-->
 <figure>
     <div class="fixed-wrap">
-        <div class="fixed">
-            <img src="imgs/pan.jpg" width="100%" height="100%">
+        <div id="fixed">
+
         </div>
     </div>
 </figure>
